--- a/src/hibernateMaster.properties
+++ b/src/hibernateMaster.properties
@@ -1,8 +1,10 @@
+#
+#Wed Jan 30 16:06:37 CET 2013
 hibernate.connection.username=admin
 hibernate.connection.password=
-hibernate.connection.driver_class=com.mysql.jdbc.Driver
-hibernate.connection.url=jdbc\:mysql\://appart.dyndns-wiki.com\:110/bddictionnairique
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.connection.pool_size=10
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
+hibernate.connection.url=jdbc\:mysql\://appart.dyndns-wiki.com\:110/bddictionnairique
+hibernate.connection.driver_class=com.mysql.jdbc.Driver
 hibernate.format_sql=true
