--- a/src/hibernateLocal.properties
+++ b/src/hibernateLocal.properties
@@ -4,5 +4,5 @@ hibernate.connection.driver_class=com.mysql.jdbc.Driver
 hibernate.connection.url=jdbc\:mysql\://localhost\:3306/Bddictionnairique
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.connection.pool_size=10
-hibernate.show_sql=false
-hibernate.format_sql=false
+hibernate.show_sql=true
+hibernate.format_sql=true
