--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,3 +1,12 @@
+#----------------------
+# Hibernate, Avertissement: SQL traced Queries et 'type' remplace le '?' dans le PreparedStatemen avec les valeurs
+#----------------------
+log4j.logger.org.hibernate.type=TRACE
+log4j.logger.org.hibernate=DEBUG
+log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.org.hibernate.transaction=INFO
+log4j.logger.org.hibernate.tool.hbm2ddl.SchemaExport=INFO
+
 log4j.rootLogger=DEBUG, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
