--- a/src/hibernateLocal.properties
+++ b/src/hibernateLocal.properties
@@ -1,8 +1,10 @@
+#
+#Tue Apr 16 23:09:10 CEST 2013
 hibernate.connection.username=root
 hibernate.connection.password=
-hibernate.connection.driver_class=com.mysql.jdbc.Driver
-hibernate.connection.url=jdbc\:mysql\://localhost\:3306/Bddictionnairique
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.connection.pool_size=10
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
+hibernate.connection.url=jdbc\:mysql\://localhost\:3306/Bddictionnairique
+hibernate.connection.driver_class=com.mysql.jdbc.Driver
 hibernate.format_sql=true
