--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate 3.5"/>
-	<classpathentry exported="true" kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/Hibernate 3.5"/>
+	<classpathentry kind="lib" path="jar/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="jar/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="jar/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="jar/forms-1.3.0.jar"/>
+	<classpathentry kind="lib" path="jar/hibernate-commons-annotations-4.0.2.Final.jar"/>
+	<classpathentry kind="lib" path="jar/hibernate-core-4.2.2.Final.jar"/>
+	<classpathentry kind="lib" path="jar/hibernate-entitymanager-4.2.2.Final.jar"/>
+	<classpathentry kind="lib" path="jar/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="jar/hibernate-jpa-2.0-api.jar"/>
+	<classpathentry kind="lib" path="jar/javassist-3.15.0-GA.jar"/>
+	<classpathentry kind="lib" path="jar/jboss-logging-3.1.0.GA.jar"/>
+	<classpathentry kind="lib" path="jar/jboss-transaction-api_1.1_spec-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="jar/log4j.jar"/>
+	<classpathentry kind="lib" path="jar/miglayout15-swing.jar"/>
+	<classpathentry kind="lib" path="jar/mysql-connector-java-5.1.25-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
