--- a/src/hibernateLocal.properties
+++ b/src/hibernateLocal.properties
@@ -1,10 +1,10 @@
 #
-#Tue Apr 16 23:09:10 CEST 2013
+#Tue Jun 18 10:10:46 CEST 2013
 hibernate.connection.username=root
 hibernate.connection.password=
 hibernate.connection.pool_size=10
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
-hibernate.connection.url=jdbc\:mysql\://localhost\:3306/Bddictionnairique
+hibernate.connection.url=jdbc\:mysql\://localhost\:3306/bddictionnairique
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
 hibernate.format_sql=true
